fix: update button background color for improved visibility

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -2,7 +2,8 @@
   height: 2.87rem;
   border-radius: 0.43rem;
 
-  background-color: #6363db;
+  /* background-color: #6363db; */
+  background-color: #e8891c;
   border: 2px solid #4f4fb9;
   color: #ebebfc;
 
